--- a/files for admin/CMS Pages/services/magento-development.html
+++ b/files for admin/CMS Pages/services/magento-development.html
@@ -54,7 +54,7 @@
         <h2 class="h3 service-single__title" itemprop="name">Why do industrial leaders
           <br />choose Magento?
         </h2>
-        <div class="service-single__squares service-table-squares">
+        <div class="service-single__squares service-table-squares service-table-squares-3col">
           <!-- 1 -->
           <div class="service-table-squares__item">
             <div class="service-square-item__body">
