--- a/files for admin/CMS Pages/services/magento-security-audit.html
+++ b/files for admin/CMS Pages/services/magento-security-audit.html
@@ -152,85 +152,6 @@
 
     </section>
 
-
-    <section class="_common-section service-single__section _grid-2-col">
-      <!-- section label -->
-      <div class="service-single__label _section-label" itemprop="keywords">Why choose us?</div>
-      <div class="service-single__content">
-        <div class="choose-us-header">
-          <h2 class="h3 service-single__title" itemprop="name" style="margin-bottom: 16px">
-            We’re a team that want to be a part
-            of a big story
-          </h2>
-          <p class="preface">
-            We developed projects of various scale and we have broad experience across all regions. Understanding the tendencies of the market and features of our clients’ mentality leads us to create a valuable concept. All of the projects we do are made for people. And that’s our priority.
-          </p>
-        </div>
-
-        <div class="choose-us-table">
-          <div class="choose-us-table__item">
-            <div class="choose-us-table__image">
-              <img src="{{media url='wysiwyg/Service/magento-development/9.svg'}}" alt="">
-            </div>
-            <p class="h4 choose-us-table__text">
-              Official Adobe Partner
-            </p>
-          </div>
-          <div class="choose-us-table__item">
-            <div class="choose-us-table__image">
-              <img src="{{media url='wysiwyg/Service/magento-development/10.svg'}}" alt="">
-            </div>
-            <p class="h4 choose-us-table__text">
-              Compliance with Magento <br> Best Practices
-            </p>
-          </div>
-          <div class="choose-us-table__item">
-            <div class="choose-us-table__image">
-              <img src="{{media url='wysiwyg/Service/magento-development/11.svg'}}" alt="">
-            </div>
-            <p class="h4 choose-us-table__text">
-              Magento Core Contributor
-            </p>
-          </div>
-          <div class="choose-us-table__item">
-            <div class="choose-us-table__image">
-              <img src="{{media url='wysiwyg/Service/magento-development/12.svg'}}" alt="">
-            </div>
-            <p class="h4 choose-us-table__text">
-              From design to optimization. End-to-end digital solutions
-            </p>
-          </div>
-        </div>
-        <div class="choose-us-circle">
-          <div class="choose-us-circle__item">
-            <div class="choose-us-circle__num _text-orange">13</div>
-            <div class="choose-us-circle__text">  years <br>
-              of experience</div>
-
-          </div>
-          <div class="choose-us-circle__item">
-            <div class="choose-us-circle__num _text-orange">70+</div>
-            <div class="choose-us-circle__text">highly qualified <br> teammebers</div>
-          </div>
-          <div class="choose-us-circle__item">
-            <div class="choose-us-circle__num _text-orange">100%</div>
-            <div class="choose-us-circle__text">Magento-only <br> focusing</div>
-          </div>
-        </div>
-        <a href="/company">
-          <button class="_button _button--arrow" style="margin-right: auto; margin-left: auto;">
-            <span class="_button__text">More about us</span>
-            <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"
-            >More about us</span
-            >
-            <span class="_button__overlay _button__overlay--hover"></span>
-            <span class="_button__overlay _button__overlay--active"></span>
-          </button>
-        </a>
-      </div>
-    </section>
-
-
     <section class="_common-section service-single__section _grid-2-col">
       <div class="service-single__label _section-label" itemprop="keywords">
         How We Provide <br />
@@ -241,7 +162,7 @@
         <p class="preface">
           A regular IT security audit for an e-commerce website is crucial for protecting sensitive customer information and securing transactions from malicious activities. One of the critical vital aspects to consider when maintaining a security strategy is addressing the OWASP Top 10, a list compiled by the Open Web Application Security Project that identifies the most critical web application security vulnerabilities and risks.
         </p>
-        <div class="service-single__collapsible _collapsible" x-data="{selected:null}">
+        <div class="service-single__collapsible _collapsible" x-data="{selected:1}">
           <!-- 1 -->
           <div data-role="collapsible" class="_collapsible__item" :class="{'active': selected == 1}">
             <div
@@ -550,6 +471,83 @@
 
         </div>
         <p>By following these steps and considering the OWASP Top 10 security threats and risks, Perspective can ensure that your e-commerce website has a robust security posture, protecting your organization and customers.</p>
+      </div>
+    </section>
+
+    <section class="_common-section service-single__section _grid-2-col">
+      <!-- section label -->
+      <div class="service-single__label _section-label" itemprop="keywords">Why choose us?</div>
+      <div class="service-single__content">
+        <div class="choose-us-header">
+          <h2 class="h3 service-single__title" itemprop="name" style="margin-bottom: 16px">
+            We’re a team that want to be a part
+            of a big story
+          </h2>
+          <p class="preface">
+            We developed projects of various scale and we have broad experience across all regions. Understanding the tendencies of the market and features of our clients’ mentality leads us to create a valuable concept. All of the projects we do are made for people. And that’s our priority.
+          </p>
+        </div>
+
+        <div class="choose-us-table">
+          <div class="choose-us-table__item">
+            <div class="choose-us-table__image">
+              <img src="{{media url='wysiwyg/Service/magento-development/9.svg'}}" alt="">
+            </div>
+            <p class="h4 choose-us-table__text">
+              Official Adobe Partner
+            </p>
+          </div>
+          <div class="choose-us-table__item">
+            <div class="choose-us-table__image">
+              <img src="{{media url='wysiwyg/Service/magento-development/10.svg'}}" alt="">
+            </div>
+            <p class="h4 choose-us-table__text">
+              Compliance with Magento <br> Best Practices
+            </p>
+          </div>
+          <div class="choose-us-table__item">
+            <div class="choose-us-table__image">
+              <img src="{{media url='wysiwyg/Service/magento-development/11.svg'}}" alt="">
+            </div>
+            <p class="h4 choose-us-table__text">
+              Magento Core Contributor
+            </p>
+          </div>
+          <div class="choose-us-table__item">
+            <div class="choose-us-table__image">
+              <img src="{{media url='wysiwyg/Service/magento-development/12.svg'}}" alt="">
+            </div>
+            <p class="h4 choose-us-table__text">
+              From design to optimization. End-to-end digital solutions
+            </p>
+          </div>
+        </div>
+        <div class="choose-us-circle">
+          <div class="choose-us-circle__item">
+            <div class="choose-us-circle__num _text-orange">13</div>
+            <div class="choose-us-circle__text">  years <br>
+              of experience</div>
+
+          </div>
+          <div class="choose-us-circle__item">
+            <div class="choose-us-circle__num _text-orange">70+</div>
+            <div class="choose-us-circle__text">highly qualified <br> teammebers</div>
+          </div>
+          <div class="choose-us-circle__item">
+            <div class="choose-us-circle__num _text-orange">100%</div>
+            <div class="choose-us-circle__text">Magento-only <br> focusing</div>
+          </div>
+        </div>
+        <a href="/company">
+          <button class="_button _button--arrow" style="margin-right: auto; margin-left: auto;">
+            <span class="_button__text">More about us</span>
+            <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"
+            >More about us</span
+            >
+            <span class="_button__overlay _button__overlay--hover"></span>
+            <span class="_button__overlay _button__overlay--active"></span>
+          </button>
+        </a>
       </div>
     </section>
 
