chage files for admin/CMS Pages/services/magento-support.html

--- a/files for admin/CMS Pages/services/magento-support.html
+++ b/files for admin/CMS Pages/services/magento-support.html
@@ -11,12 +11,14 @@
       <div class="optimization-page-intro__image optimization-page-intro__image--mobile">
         <img src="{{media url='wysiwyg/Service/magento-support/1.svg'}}" alt="" />
       </div>
+      <p class="h4 services-page__sub-title">
+        Running a Magento store invariably means handling a plethora of functionalities and serving a global customer base. The business's growth hinges on a proficient support team that can ensure stability, security, and scalability while preparing for peak sales times.
+      </p>
     </div>
     <div class="service-single__optimization optimization-page-intro _grid-3-col">
       <div class="empty"></div>
 
       <div class="optimization-page-intro__col">
-        <p class="h4">Running a Magento store invariably means handling a plethora of functionalities and serving a global customer base. The business's growth hinges on a proficient support team that can ensure stability, security, and scalability while preparing for peak sales times. </p>
         <p class="h4">At its core, our support service aims to free up your time (and resources), allowing you to focus on executing your sales strategies.</p>
         <a
                 href="#footer"
@@ -365,39 +367,36 @@
                 </h5>
               </div>
             </div>
-
-            <!-- 8 -->
-            <div data-role="collapsible" class="_collapsible__item" :class="{'active': selected == 6}">
-              <div
-                      data-role="trigger"
-                      class="_collapsible__trigger"
-                      @click="selected !== 6 ? selected = 6 : selected = null"
-              >
-                <div class="_collapsible__header">
-                  <h4 class="_h4 _collapsible__title">
-                    <span class="_text-orange">8.</span>
-                    <span class="font-medium">Continuous Improvement Suggestions</span>
-                  </h4>
-                </div>
-                <span class="_collapsible__plus-sign"></span>
-              </div>
-            </div>
+          </div>
+          <!-- 8 -->
+          <div data-role="collapsible" class="_collapsible__item" :class="{'active': selected == 8}">
             <div
-                    data-role="content"
-                    style=""
-                    x-ref="container6"
-                    x-bind:style="selected == 6 ? 'max-height: ' + $refs.container6.scrollHeight + 'px' : ''"
+                    data-role="trigger"
+                    class="_collapsible__trigger"
+                    @click="selected !== 8 ? selected = 8 : selected = null"
             >
-              <div class="_collapsible__content" style="display: block">
-                <div class="_collapsible__col">
-                  <h5 class="_collapsible__text" style="margin-bottom: 24px">
-                    Given our active management of 30-50 Magento projects, we provide regular suggestions for market-driven improvements that could benefit your business. Your role is simply to prioritize these improvements, and we'll help you stay on the cutting edge of the market.
-                  </h5>
-                </div>
+              <div class="_collapsible__header">
+                <h4 class="_h4 _collapsible__title">
+                  <span class="_text-orange">8.</span>
+                  <span class="font-medium">Continuous Improvement Suggestions</span>
+                </h4>
+              </div>
+              <span class="_collapsible__plus-sign"></span>
+            </div>
+          </div>
+          <div
+                  data-role="content"
+                  style=""
+                  x-ref="container8"
+                  x-bind:style="selected == 8 ? 'max-height: ' + $refs.container8.scrollHeight + 'px' : ''"
+          >
+            <div class="_collapsible__content" style="display: block">
+              <div class="_collapsible__col">
+                <h5 class="_collapsible__text" style="margin-bottom: 24px">
+                  Given our active management of 30-50 Magento projects, we provide regular suggestions for market-driven improvements that could benefit your business. Your role is simply to prioritize these improvements, and we'll help you stay on the cutting edge of the market.
+                </h5>
               </div>
             </div>
-
-
           </div>
           <p></p>
         </div>
