change pages services

--- a/files for admin/CMS Pages/services/magento-pwa.html
+++ b/files for admin/CMS Pages/services/magento-pwa.html
@@ -150,7 +150,7 @@
         <h2 class="h3 service-single__title" itemprop="name" style="margin-bottom: 16px">We deliver exceptional magento <br> pwa experiences</h2>
         <p class="preface">
         </p>
-        <div class="service-single__collapsible _collapsible" x-data="{selected:null}">
+        <div class="service-single__collapsible _collapsible" x-data="{selected:1}">
           <!-- 1 -->
           <div data-role="collapsible" class="_collapsible__item" :class="{'active': selected == 1}">
             <div
