change-footer-links and add page breeze

--- a/files for admin/CMS Blocks/footer-links-content.html
+++ b/files for admin/CMS Blocks/footer-links-content.html
@@ -67,25 +67,25 @@
             x-bind:style="selected == 'services' ? 'max-height: ' + $refs.services.scrollHeight + 'px' : ''"
     >
       <div class="footer-links-content__sublink">
-        <a href="{{store url='services'}}#services-design-section">Web Design</a>
+        <a href="{{store url='services/comprehensive-web-design'}}">Web Design</a>
       </div>
       <div class="footer-links-content__sublink">
-        <a href="{{store url='services'}}#services-development-section">Magento Development</a>
+        <a href="{{store url='services/magento-development'}}">Magento Development</a>
       </div>
       <div class="footer-links-content__sublink">
-        <a href="{{store url='services'}}#services-migration-section">Magento 2 Migration</a>
+        <a href="{{store url='services/migration-to-magento-2'}}">Magento 2 Migration</a>
       </div>
       <div class="footer-links-content__sublink">
-        <a href="{{store url='services'}}#services-pwa-section">Magento PWA</a>
+        <a href="{{store url='services/magento-pwa'}}">Magento PWA</a>
       </div>
       <div class="footer-links-content__sublink">
-        <a href="{{store url='services'}}#services-security-section">Magento Security Audit</a>
+        <a href="{{store url='services/magento-security-audit'}}">Magento Security Audit</a>
       </div>
       <div class="footer-links-content__sublink">
-        <a href="{{store url='services'}}#services-support-section">Magento Support</a>
+        <a href="{{store url='services/magento-support'}}">Magento Support</a>
       </div>
       <div class="footer-links-content__sublink">
-        <a href="{{store url='services'}}#services-optimization-section">Server & Magento Optimization</a>
+        <a href="{{store url='services/server-optimization'}}">Server & Magento Optimization</a>
       </div>
       <div class="footer-links-content__sublink">
         <a href="{{store url='services/implementation-google-analytics-4-on-magento-2-with-gtm'}}"
