--- a/files for admin/CMS Pages/services/comprehensive-web-design.html
+++ b/files for admin/CMS Pages/services/comprehensive-web-design.html
@@ -114,18 +114,18 @@
           </div>
           <div class="advantages-extended__item">
             <p  style="margin-bottom: 8px;">Upon identifying interface shortcomings, we prioritize based on their impact on conversion rates. We follow the principle of rapid changes:
-            <p style="display: flex;">
-              <span class="_text-orange">1.</span>
-              <span>We break all tasks into sprints, each designed to deliver maximum benefit to your business. The first sprint addresses the most critical interface errors that, when corrected, will significantly improve conversion rates.</span>
-            </p>
+
           </div>
           <div class="advantages-extended__item">
-            <p  style="margin-bottom: 8px;">Upon identifying interface shortcomings, we prioritize based on their impact on conversion rates. We follow the principle of rapid changes:
+
+          </div>
+          <div class="advantages-extended__item">
             <p style="display: flex;">
               <span class="_text-orange">1.</span>
               <span>We break all tasks into sprints, each designed to deliver maximum benefit to your business. The first sprint addresses the most critical interface errors that, when corrected, will significantly improve conversion rates.</span>
             </p>
           </div>
+
           <div class="advantages-extended__item">
             <p style="display: flex; margin-bottom: 8px">
               <span class="_text-orange">2.</span>
@@ -213,96 +213,20 @@
       <!-- content (span 2) -->
 
     </section>
-
-
-    <section class="_common-section service-single__section _grid-2-col">
-      <!-- section label -->
-      <div class="service-single__label _section-label" itemprop="keywords">Why choose us?</div>
-      <div class="service-single__content">
-        <div class="choose-us-header">
-          <h2 class="h3 service-single__title" itemprop="name" style="margin-bottom: 16px">
-            We’re a team that want to be a part
-            of a big story
-          </h2>
-          <p class="preface">
-            We developed projects of various scale and we have broad experience across all regions. Understanding the tendencies of the market and features of our clients’ mentality leads us to create a valuable concept. All of the projects we do are made for people. And that’s our priority.
-          </p>
-        </div>
-
-        <div class="choose-us-table">
-          <div class="choose-us-table__item">
-            <div class="choose-us-table__image">
-              <img src="{{media url='wysiwyg/Service/magento-development/9.svg'}}" alt="">
-            </div>
-            <p class="h4 choose-us-table__text">
-              Official Adobe Partner
-            </p>
-          </div>
-          <div class="choose-us-table__item">
-            <div class="choose-us-table__image">
-              <img src="{{media url='wysiwyg/Service/magento-development/10.svg'}}" alt="">
-            </div>
-            <p class="h4 choose-us-table__text">
-              Compliance with Magento <br> Best Practices
-            </p>
-          </div>
-          <div class="choose-us-table__item">
-            <div class="choose-us-table__image">
-              <img src="{{media url='wysiwyg/Service/magento-development/11.svg'}}" alt="">
-            </div>
-            <p class="h4 choose-us-table__text">
-              Magento Core Contributor
-            </p>
-          </div>
-          <div class="choose-us-table__item">
-            <div class="choose-us-table__image">
-              <img src="{{media url='wysiwyg/Service/magento-development/12.svg'}}" alt="">
-            </div>
-            <p class="h4 choose-us-table__text">
-              From design to optimization. End-to-end digital solutions
-            </p>
-          </div>
-        </div>
-        <div class="choose-us-circle">
-          <div class="choose-us-circle__item">
-            <div class="choose-us-circle__num _text-orange">13</div>
-            <div class="choose-us-circle__text">  years <br>
-              of experience</div>
-
-          </div>
-          <div class="choose-us-circle__item">
-            <div class="choose-us-circle__num _text-orange">70+</div>
-            <div class="choose-us-circle__text">highly qualified <br> teammebers</div>
-          </div>
-          <div class="choose-us-circle__item">
-            <div class="choose-us-circle__num _text-orange">100%</div>
-            <div class="choose-us-circle__text">Magento-only <br> focusing</div>
-          </div>
-        </div>
-        <a href="/company">
-          <button class="_button _button--arrow" style="margin-right: auto; margin-left: auto;">
-            <span class="_button__text">More about us</span>
-            <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"
-            >More about us</span
-            >
-            <span class="_button__overlay _button__overlay--hover"></span>
-            <span class="_button__overlay _button__overlay--active"></span>
-          </button>
-        </a>
-      </div>
-
-    </section>
     <section class="_common-section service-single__section _grid-2-col">
       <div class="service-single__label _section-label" itemprop="keywords">
         How We Provide <br />
         This Service
       </div>
       <div class="how_do_it service-single__content">
-        <h2 class="h3 service-single__title" itemprop="name" style="margin-bottom: 16px">We create <br> human-centric <br> experiences </h2>
-        <p class="preface">
-          Web design helps merchants achieve their business goals -to increase brand recognition and boost conversion rate.
-          We use powerful design techniques and psychological tricks together to prompt users to take desired actions on your website.
-        </p>
+        <div class="section-header-col2">
+          <h2 class="h3 service-single__title" itemprop="name" style="margin-bottom: 16px">We create <br> human-centric <br> experiences </h2>
+          <p class="preface">
+            Web design helps merchants achieve their business goals -to increase brand recognition and boost conversion rate.
+            We use powerful design techniques and psychological tricks together to prompt users to take desired actions on your website.
+          </p>
+        </div>
+
         <div class="service-single__collapsible">
           <!-- 1 -->
           <div class="how_do_it_item">
@@ -360,6 +284,80 @@
 
           <!-- 10 -->
         </div>
+      </div>
+    </section>
+    <section class="_common-section service-single__section _grid-2-col">
+      <!-- section label -->
+      <div class="service-single__label _section-label" itemprop="keywords">Why choose us?</div>
+      <div class="service-single__content">
+        <div class="choose-us-header">
+          <h2 class="h3 service-single__title" itemprop="name" style="margin-bottom: 16px">
+            We’re a team that want to be a part
+            of a big story
+          </h2>
+          <p class="preface">
+            We developed projects of various scale and we have broad experience across all regions. Understanding the tendencies of the market and features of our clients’ mentality leads us to create a valuable concept. All of the projects we do are made for people. And that’s our priority.
+          </p>
+        </div>
+        <div class="choose-us-table">
+          <div class="choose-us-table__item">
+            <div class="choose-us-table__image">
+              <img src="{{media url='wysiwyg/Service/magento-development/9.svg'}}" alt="">
+            </div>
+            <p class="h4 choose-us-table__text">
+              Official Adobe Partner
+            </p>
+          </div>
+          <div class="choose-us-table__item">
+            <div class="choose-us-table__image">
+              <img src="{{media url='wysiwyg/Service/magento-development/10.svg'}}" alt="">
+            </div>
+            <p class="h4 choose-us-table__text">
+              Compliance with Magento <br> Best Practices
+            </p>
+          </div>
+          <div class="choose-us-table__item">
+            <div class="choose-us-table__image">
+              <img src="{{media url='wysiwyg/Service/magento-development/11.svg'}}" alt="">
+            </div>
+            <p class="h4 choose-us-table__text">
+              Magento Core Contributor
+            </p>
+          </div>
+          <div class="choose-us-table__item">
+            <div class="choose-us-table__image">
+              <img src="{{media url='wysiwyg/Service/magento-development/12.svg'}}" alt="">
+            </div>
+            <p class="h4 choose-us-table__text">
+              From design to optimization. End-to-end digital solutions
+            </p>
+          </div>
+        </div>
+        <div class="choose-us-circle">
+          <div class="choose-us-circle__item">
+            <div class="choose-us-circle__num _text-orange">13</div>
+            <div class="choose-us-circle__text">  years <br>
+              of experience</div>
+          </div>
+          <div class="choose-us-circle__item">
+            <div class="choose-us-circle__num _text-orange">70+</div>
+            <div class="choose-us-circle__text">highly qualified <br> teammebers</div>
+          </div>
+          <div class="choose-us-circle__item">
+            <div class="choose-us-circle__num _text-orange">100%</div>
+            <div class="choose-us-circle__text">Magento-only <br> focusing</div>
+          </div>
+        </div>
+        <a href="/company">
+          <button class="_button _button--arrow" style="margin-right: auto; margin-left: auto; color: #333">
+            <span class="_button__text">More about us</span>
+            <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"
+            >More about us</span
+            >
+            <span class="_button__overlay _button__overlay--hover"></span>
+            <span class="_button__overlay _button__overlay--active"></span>
+          </button>
+        </a>
       </div>
     </section>
 
