--- a/files for admin/CMS Pages/services/magento-pwa.html
+++ b/files for admin/CMS Pages/services/magento-pwa.html
@@ -435,7 +435,7 @@
                     </div>
                 </div>
                 <a href="/company">
-                    <button class="_button _button--arrow" style="margin-right: auto; margin-left: auto;">
+                    <button class="_button _button--arrow" style="margin-right: auto; margin-left: auto; color: #333">
                         <span class="_button__text">More about us</span>
                         <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"
                         >More about us</span
