fix services page

--- a/files for admin/CMS Pages/services/comprehensive-web-design.html
+++ b/files for admin/CMS Pages/services/comprehensive-web-design.html
@@ -35,7 +35,7 @@
       </div>
       <a
               href="#footer"
-              class="_button _button--orange-bg _button--arrow _scrollTo optimization-page-intro__button--mobile"
+              class="_button _button--orange-bg _scrollTo optimization-page-intro__button--mobile"
       >
         <h5 class="h5 _button__text">Let’s do it!</h5>
         <span class="_button__overlay _button__overlay--hover"></span>
@@ -227,7 +227,7 @@
           </p>
         </div>
 
-        <div class="service-single__collapsible">
+        <div>
           <!-- 1 -->
           <div class="how_do_it_item">
             <h4 class="_h4">
