--- a/files for admin/CMS Pages/services/magento-support.html
+++ b/files for admin/CMS Pages/services/magento-support.html
@@ -37,7 +37,7 @@
       </div>
       <a
               href="#footer"
-              class="_button _button--orange-bg _button--arrow _scrollTo optimization-page-intro__button--mobile"
+              class="_button _button--orange-bg _scrollTo optimization-page-intro__button--mobile"
       >
         <h5 class="h5 _button__text">Let’s do it!</h5>
         <span class="_button__overlay _button__overlay--hover"></span>
