--- a/files for admin/CMS Pages/services/migration-to-magento-2.html
+++ b/files for admin/CMS Pages/services/migration-to-magento-2.html
@@ -2,8 +2,6 @@
         class="service-single service-page"
         x-data
         x-init="localStorage.setItem('isAnyFormTouched', false)"
-        itemscope
-        itemtype="https://schema.org/FAQPage"
 >
   <div class="services-page__container _container">
     <div class="service-page__top _grid-3-col">
@@ -38,7 +36,7 @@
       </div>
       <a
               href="#footer"
-              class="_button _button--orange-bg _button--arrow _scrollTo optimization-page-intro__button--mobile"
+              class="_button _button--orange-bg  _scrollTo optimization-page-intro__button--mobile"
       >
         <h5 class="h5 _button__text">Let’s do it!</h5>
         <span class="_button__overlay _button__overlay--hover"></span>
